enable_shared_from_base template 구현 / RendererBase Component 구조 잡기 / 테스트 코드
파생 클래스에서 상속받아 부모 클래스의 enable_shared_from_this를 공유하여, 파생 클래스 자체의 스마트 포인터를 만들 수 있도록 도와주는 클래스

--- a/DUOLGame/DUOLGame.vcxproj.filters
+++ b/DUOLGame/DUOLGame.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="src\DUOLGame\TestScripts\CoroutineLogTest.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="src\DUOLGame\TestScripts\EnableTest.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\DUOLGame\Application.h">
@@ -36,6 +39,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Include\DUOLGame\TestScripts\CoroutineLogTest.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\DUOLGame\TestScripts\EnableTest.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
