파티클 시스템 구현 중.
Imgui로 간단한 값 수정 가능.

--- a/DUOLEffectEditor/EffectToolDemo/EffectToolDemo/EffectToolDemo.vcxproj
+++ b/DUOLEffectEditor/EffectToolDemo/EffectToolDemo/EffectToolDemo.vcxproj
@@ -178,6 +178,7 @@
     <ClCompile Include="..\Library\inc\SimpleMath.cpp" />
     <ClCompile Include="EntryPoint.cpp" />
     <ClCompile Include="GameProcess.cpp" />
+    <ClCompile Include="Inspector.cpp" />
     <ClCompile Include="IntroScene.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -189,6 +190,7 @@
   <ItemGroup>
     <ClInclude Include="..\Library\inc\SimpleMath.h" />
     <ClInclude Include="GameProcess.h" />
+    <ClInclude Include="Inspector.h" />
     <ClInclude Include="IntroScene.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
