--- a/DUOLEffectEditor/EffectToolDemo/EffectToolDemo/EffectToolDemo.vcxproj.filters
+++ b/DUOLEffectEditor/EffectToolDemo/EffectToolDemo/EffectToolDemo.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="IntroScene.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Inspector.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -43,6 +46,9 @@
     </ClInclude>
     <ClInclude Include="IntroScene.h">
       <Filter>소스 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Inspector.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
