--- a/DUOLEffectEditor/EffectToolDemo/EffectToolDemo/imgui.ini
+++ b/DUOLEffectEditor/EffectToolDemo/EffectToolDemo/imgui.ini
@@ -1,10 +1,29 @@
 [Window][Debug##Default]
-Pos=60,-4
+Pos=68,4
 Size=400,400
 Collapsed=0
 
 [Window][Test]
-Pos=1045,190
-Size=665,672
+Pos=59,107
+Size=306,385
 Collapsed=0
+
+[Window][Another Window]
+ViewportPos=3079,367
+ViewportId=0xA4D966FE
+Size=707,258
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Hello, world!]
+ViewportPos=3182,372
+ViewportId=0xA4D966FE
+Size=707,522
+Collapsed=0
+DockId=0x00000003,0
+
+[Docking][Data]
+DockNode    ID=0x00000001 Pos=3182,372 Size=707,522 Split=Y
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=707,258 Selected=0xD279B26D
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=707,262 Selected=0xD00C9CD4
 
